Expand CORS configuration and exposed headers
Updated CORS settings in SecurityConfig and WebConfig to allow additional HTTP methods and expose more headers, improving compatibility with frontend applications. Also adjusted permitted endpoints and enhanced documentation within the configuration.